--- a/Views/Home/CreateChef.cshtml
+++ b/Views/Home/CreateChef.cshtml
@@ -9,12 +9,12 @@
     >
     <div class="mb-3">
         <label asp-for="FirstName">FirstName <span class="text-danger" asp-validation-for="FirstName"></span> </label>
-        <input type="text" asp-for="FirstName" class=" w-25"> 
+        <input type="text" asp-for="FirstName" class="form-control w-25"> 
     </div>
 
     <div class="mb-3">
         <label asp-for="LastName">LastName <span class="text-danger" asp-validation-for="LastName"></span> </label>
-        <input type="text" asp-for="LastName" class=" w-25"> 
+        <input type="text" asp-for="LastName" class="form-control w-25"> 
     </div>
 
     <div class="mb-3">
